add global class for hover effect

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,14 @@
   box-sizing: border-box;
 }
 
-.nav-link {
-  @apply flex flex-col gap-1 justify-center items-center hover:text-primary-color hover:bg-gray-100 p-2 rounded-full dark:text-white dark:hover:bg-dark-container
+.hover {
+  @apply  hover:bg-gray-100 p-2 rounded-full dark:hover:bg-dark-container
 }
-.input{
+
+.nav-link {
+  @apply flex flex-col gap-1 justify-center items-center dark:text-white hover hover:text-primary-color
+}
+
+.input {
   @apply w-full bg-gray-200 ps-5 pr-14 py-3 rounded-2xl focus:outline-none dark:bg-dark-container dark:text-white
 }
