--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,6 @@
 .input {
   @apply w-full bg-gray-200 ps-5 pr-14 py-3 rounded-2xl focus:outline-none dark:bg-dark-container dark:text-white
 }
+.auth-button{
+  @apply text-black bg-gray-200 dark:text-white dark:bg-dark-container py-2 px-3 rounded-full
+}
