--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 .hover {
-  @apply  hover:bg-gray-100 p-2 rounded-full dark:hover:bg-dark-container
+  @apply hover:bg-gray-100 p-2 rounded-full dark:hover:bg-dark-container
 }
 
 .nav-link {
@@ -19,6 +19,7 @@
 .input {
   @apply w-full bg-gray-200 ps-5 pr-14 py-3 rounded-2xl focus:outline-none dark:bg-dark-container dark:text-white
 }
-.auth-button{
-  @apply text-black bg-gray-200 dark:text-white dark:bg-dark-container py-2 px-3 rounded-full
+
+.auth-button {
+  @apply font-medium text-sm text-black bg-gray-200 dark:text-white dark:bg-dark-container py-1 px-2 sm:py-2 sm:px-3 rounded-full 
 }
