--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@
 }
 
 .input {
-  @apply w-full bg-gray-200 ps-5 pr-14 py-3 rounded-2xl focus:outline-none dark:bg-dark-container dark:text-white
+  @apply w-full bg-gray-200 ps-5 pr-14 py-2 sm:py-3 rounded-full sm:rounded-2xl focus:outline-none dark:bg-dark-container dark:text-white
 }
 
 .auth-button {
