--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,11 +13,11 @@
 }
 
 .active-link {
-  @apply text-primary-color bg-gray-100 p-2 rounded-full dark:bg-dark-container
+  @apply text-primary bg-gray-100 p-2 rounded-full dark:bg-dark-container
 }
 
 .nav-link {
-  @apply flex flex-col gap-1 justify-center items-center dark:text-white hover hover:text-primary-color
+  @apply flex flex-col gap-1 justify-center items-center dark:text-white hover hover:text-primary
 }
 
 .input {
@@ -29,7 +29,7 @@
 }
 
 .button {
-  @apply text-center font-bold text-lg  px-4 py-2 mt-4 bg-white text-black rounded-3xl hover:text-white hover:bg-primary-color w-fit duration-300;
+  @apply text-center font-bold text-lg px-4 py-2 mt-4 bg-white text-black rounded-3xl hover:text-white hover:bg-primary w-fit duration-300;
 }
 
 .bg_image {
