--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
 }
 
 .button {
-  @apply text-center font-bold text-lg px-4 py-2 mt-4 bg-white text-black rounded-3xl hover:text-white hover:bg-primary w-fit duration-300;
+  @apply text-center font-bold text-lg px-4 py-2 mt-4 bg-white text-black rounded-full hover:text-white hover:bg-primary w-fit duration-300;
 }
 
 .bg_image {
@@ -40,5 +40,5 @@
   background-repeat: no-repeat;
 }
 .msg-toast{
-  @apply absolute top-2 left-[50%] translate-x-[-50%] text-white p-2 rounded-2xl opacity-80
+  @apply absolute top-2 left-[50%] translate-x-[-50%] text-white p-2 rounded-full opacity-80
 }
