--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
 }
 
 .button {
-  @apply text-center font-bold text-lg px-4 py-2 mt-4 bg-black dark:bg-white text-white dark:text-black rounded-full hover:text-white hover:bg-primary w-fit duration-300;
+  @apply text-center font-bold text-lg px-4 py-2 mt-4 bg-black dark:bg-white text-white dark:text-black rounded-full hover:text-white hover:bg-primary w-fit duration-300 disabled:bg-gray-400 disabled:cursor-not-allowed;
 }
 
 .bg_image {
