edit toast to take left posistion from outside finsh half of single product page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,11 @@
   background-position-y: 20%;
   background-repeat: no-repeat;
 }
-.msg-toast{
-  @apply absolute top-2 left-[50%] translate-x-[-50%] text-white p-2 rounded-full opacity-80
+
+.msg-toast {
+  @apply absolute top-2 text-white p-2 rounded-full opacity-80
+}
+
+.tag {
+  @apply text-black dark:text-white hover:text-white hover:bg-primary duration-300 py-1 px-4 rounded-full border-2 border-gray-100 dark:border-dark-container ;
 }
