--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@
 }
 
 .msg-toast {
-  @apply absolute top-2 text-white p-2 rounded-full opacity-80
+  @apply absolute top-2 left-[50%] translate-x-[-50%] text-white p-2 rounded-full opacity-80
 }
 
 .tag {
