--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,5 +56,8 @@
   @apply cursor-pointer hover:text-red-600 duration-300 disabled:cursor-not-allowed
 }
 .theme-button{
-  @apply fixed bottom-5 right-5 z-50 w-10 h-10 p-2 rounded-full
+  @apply flex gap-2 p-1 justify-center items-center
+}
+.theme-icon{
+  @apply w-8 h-8 text-primary
 }
