--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,8 +56,8 @@
   @apply cursor-pointer hover:text-red-600 duration-300 disabled:cursor-not-allowed
 }
 .theme-button{
-  @apply flex gap-2 p-1 justify-center items-center
+  @apply w-full flex gap-2 py-2 px-3 justify-start items-center
 }
 .theme-icon{
-  @apply w-8 h-8 text-primary
+  @apply w-8 h-8 text-white dark:text-black
 }
