--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,7 @@
 }
 
 .cart-button {
-  @apply w-full font-medium mt-5 py-2 px-3 rounded-full hover:bg-primary hover:text-white duration-300 disabled:bg-gray-400 disabled:cursor-not-allowed
+  @apply w-full font-medium mt-5 py-2 px-3 rounded-full hover:bg-primary hover:text-white dark:hover:text-white dark:hover:bg-primary duration-300 disabled:bg-gray-400 disabled:cursor-not-allowed
 }
 
 .wishlist-button {
